added search functionality

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <body>
         <nav class="top-nav">
             <div class="left-nav">
-                <font style="vertical-align: inherit;" class="link about">About</font>
-                <font style="vertical-align: inherit;" class="link google-store">Store</font>
+                <div style="vertical-align: inherit;" class="link about">About</div>
+                <div style="vertical-align: inherit;" class="link google-store">Store</div>
             </div>
             <div class="right-nav">
                 <div>
-                    <font style="vertical-align: inherit;" class="link gmail">Gmail</font>
-                    <font style="vertical-align: inherit;" class="link images">Images</font> 
+                    <div style="vertical-align: inherit;" class="link gmail">Gmail</div>
+                    <div style="vertical-align: inherit;" class="link images">Images</div>
                 </div>
                 <div class="menu-container">
                     <a><img alt="waffle menu icon" class="menu" src="images/google-waffle-menu.png"></a>
                 </div>
                 <div class="profile-container">
-                    <a><img alt="Account profile" class="profile" src="./images/google-profile.webp"></a>                 
+                    <a><img alt="Account profile" class="profile" src="./images/google-profile.webp"></a>
                 </div>
             </div>
         </nav>
@@ -30,13 +30,13 @@
             <div class="logo">
                 <img src="images/google-logo.png" alt="">
             </div>
-            <form>
+            <form class="search-form" id="form">
                 <div class="searchbar">
                     <div class="inside-bar">
                         <div class="mag-glass">
                             <img src="images/google-search.png" alt="">
                         </div>
-                        <input type="text" placeholder="" class="search">
+                        <input type="text" placeholder="" value="" class="search" id="search">
                         <div class="microphone">
                             <img src="images/google-microphone.png" alt="">
                         </div>
@@ -51,20 +51,20 @@
         </main>
 <!-- FOOTER -->
         <footer class="footer">
-            <font style="vertical-align: inherit;" class="country">Canada</font>
+            <div style="vertical-align: inherit;" class="country">Canada</div>
             <div class="footer-links">
                 <div class="left-footer">
-                    <font style="vertical-align: inherit;" class="link linkf">Advertising </font>
-                    <font style="vertical-align: inherit;" class="link linkf">Business</font>
-                    <font style="vertical-align: inherit;" class="link linkf">How Search works</font>
+                    <div style="vertical-align: inherit;" class="link linkf">Advertising </div>
+                    <div style="vertical-align: inherit;" class="link linkf">Business</div>
+                    <div style="vertical-align: inherit;" class="link linkf">How Search works</div>
                 </div>
                 <div class="right-footer">
-                    <font style="vertical-align: inherit;" class="link linkf">Privacy</font>
-                    <font style="vertical-align: inherit;" class="link linkf">Terms</font>
-                    <font style="vertical-align: inherit;" class="link linkf">Settings</font>
+                    <div style="vertical-align: inherit;" class="link linkf">Privacy</div>
+                    <div style="vertical-align: inherit;" class="link linkf">Terms</div>
+                    <div style="vertical-align: inherit;" class="link linkf">Settings</div>
                 </div>
             </div>
         </footer>
-
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
